# revi

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.claude/: settings.json
.claude/skills/release-workflow/: SKILL.md
.claude/skills/revi-dev/: SKILL.md
.claude/skills/rust-dev/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  DECISIONS.md  PROJECT_BRIEF.md
prompts/agent/: claude-code.txt.j2  codex.txt.j2  gemini.txt.j2
prompts/skill/: default.txt.j2
src/: bootstrap.rs  catalog.rs  cli.rs  config.rs  doctor.rs  lib.rs  main.rs  manifest.rs  scaffold.rs  wizard.rs
src/providers/: claude.rs  minimax.rs  mod.rs  ollama.rs
templates/desktop-tauri/: manifest.toml
templates/generic-project/: manifest.toml
templates/go-api/: manifest.toml
templates/go-api/templates/: .gitignore  README.md.j2  go.mod.j2
templates/go-api/templates/.github/workflows/: ci.yml.j2  release.yml.j2
templates/go-api/templates/cmd/server/: main.go.j2
templates/godot-3d-game/: .gitignore  manifest.toml
templates/kotlin-cli/: manifest.toml
templates/kotlin-cli/templates/: .gitignore  README.md.j2  build.gradle.kts.j2  settings.gradle.kts.j2
templates/node-web/: manifest.toml
templates/python-service/: manifest.toml
templates/rust-web/: manifest.toml
templates/rust-web/templates/: .gitignore  Cargo.toml.j2  Dockerfile.j2  README.md.j2
templates/rust-web/templates/src/: error.rs.j2  main.rs.j2
(+9 files in other folders)
