[package]
name = "revi"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/bolinz/revi"
description = "AI-native bootstrap and release tool for code projects"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
