[package]
name = "revi"
version = "0.1.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/bolinz/revi"
description = "AI-native bootstrap and release tool for code projects"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.14"
